Fixed admin footer div

--- a/just_arrived.html
+++ b/just_arrived.html
@@ -50,7 +50,7 @@
     <a href = "#" class = "admin">toggle admin</a> | 
     {{/if}}
     {{loginButtons}}
-  </div?
+  </div>
 </template>
 
 <template name = "admin">
