Changing admin-footer class name to avoid conflict

--- a/just_arrived.html
+++ b/just_arrived.html
@@ -45,7 +45,7 @@
 <template name = "footer">
   <a href = "http://crowdcompass.com">CrowdCompass | An Essential Part of Your Next Event</a>
   
-  <div class="admin">
+  <div class="admin-footer">
     {{#if isAdmin}}
     <a href = "#" class = "admin">toggle admin</a> | 
     {{/if}}
