Removed Referrer from table

--- a/just_arrived.html
+++ b/just_arrived.html
@@ -62,16 +62,19 @@
         <th>Company</th>
       	<th>Email</th>
         <th>Twitter</th>
-      	<th>Referrer</th>
+        <!-- <th>Referrer</th> -->
         <th>Time</th>
       </tr>
     </thead>
     <tbody>
     {{#each attendees}}
       <tr>
-      		<td>{{ this.name }}</td><td>{{ this.company }}</td>
-      		<td>{{ this.email }}</td><td>{{ this.twitter_id }}</td>
-      		<td>{{ this.referrer }}</td><td>{{ this.timestamp }}</td>
+      		<td>{{ this.name }}</td>
+          <td>{{ this.company }}</td>
+      		<td>{{ this.email }}</td>
+          <td>{{ this.twitter_id }}</td>
+          <!-- <td>{{ this.referrer }}</td> -->
+          <td>{{ this.timestamp }}</td>
       </tr>
     {{/each }}
   </tbody>
