Cleanup of date formatting

--- a/just_arrived.html
+++ b/just_arrived.html
@@ -106,7 +106,7 @@
           <td>{{ this.name }}</td>
           <td>{{ this.company }}</td>
           <td>{{ this.twitter_id }}</td>
-          <td>{{ timeAgo this.timestamp format="MMMM YYYY" }} ago</td>
+          <td>{{ timeAgo this.timestamp }} ago</td>
       </tr>
     {{/each }}
   </tbody>
