--- a/just_arrived.html
+++ b/just_arrived.html
@@ -11,7 +11,9 @@
 <template name="layout">
   <div class='header'>
     <div class="wrapper">
-      <h1>JustArrived</h1>
+      <h1>
+        <a href="/">JustArrived</a>  
+      </h1>
     </div>
   </div>
   
@@ -38,7 +40,11 @@
 <template name = "registration">
   <div class="wrapper registration">
   {{#if registrationSubmitted }}
-    <h2>Thanks for announcing your arrival!</h2>
+    <h3>Thank you for announcing your arrival!</h3>
+    <p><a href="/wall">See who else is here.</a></p>
+    <hr>
+    <p>If you just got here, be sure to check in below.</p>
+    <a href="/" class="button">Announce Your Arrival!</a>
   {{else }}
     <p>Share your arrival with others and stay connected after the event.</p>
     <form>
@@ -52,13 +58,13 @@
       <button>Announce Your Arrival!</button>
   {{/if}}
  		</form>
-    {{> attendeeCount}}
+    <p>Attendees here: <strong>{{> attendeeCount}}</strong></p>
   </div>
 </template>
 
 <template name = "footer">
   <div class='footer'>
-    <a href = "http://crowdcompass.com">CrowdCompass | An Essential Part of Your Next Event</a>
+    <p><a href = "http://crowdcompass.com">CrowdCompass</a> | An Essential Part of Your Next Event</p>
     
     <div class="admin-footer">
       {{#if isAdmin}}
@@ -71,7 +77,7 @@
 
 <template name = "admin">
   <div class="wrapper attendee-list">
-    <h2>Registered Attendees</h2>
+    <h2>{{n}} attendees have registered.</h2>
     <table>
       <thead>
         <tr>
@@ -97,7 +103,7 @@
     </tbody>
     </table>
     <!-- Mobile display of attendees -->
-    <h3 class="mobile">Registered Attendees</h3>
+    <h3 class="mobile">{{n}} attendees have registered.</h3>
     <ul class="mobile">
       {{#each attendees}}
       <li>
@@ -119,7 +125,7 @@
 
 <template name = "wall">
   <div class="wrapper attendee-list">
-    <h2>Wall Attendees</h2>
+    <h2>Attendees here: {{> attendeeCount}}</h2>
     <table>
       <tbody>
       {{#each attendees}}
@@ -133,7 +139,7 @@
     </tbody>
     </table>
     <!-- Mobile display of attendees -->
-    <h3 class="mobile">Wall Attendees</h3>
+    <h3 class="mobile">{{n}} attendees are here.</h3>
     <ul class="mobile">
       {{#each attendees}}
       <li>
@@ -147,7 +153,8 @@
 </template>
 
 <template name="attendeeCount">
-  <p><strong>{{n}}</strong> attendees are here</p>
+  {{n}}
+  <!-- <p><strong>{{n}}</strong> attendees are here</p> -->
 </template>
 
 
