--- a/just_arrived.html
+++ b/just_arrived.html
@@ -77,7 +77,7 @@
 
 <template name = "admin">
   <div class="wrapper attendee-list">
-    <h2>{{n}} attendees have registered.</h2>
+    <h2>Registered attendees: {{> attendeeCount}}</h2>
     <table>
       <thead>
         <tr>
