--- a/just_arrived.html
+++ b/just_arrived.html
@@ -1,6 +1,10 @@
 <head>
   <title>JustArrived | CrowdCompass</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="apple-touch-icon-precomposed" href="./touch-icon-iphone.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="./touch-icon-ipad.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="./touch-icon-iphone-retina.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="./touch-icon-ipad-retina.png" />
 	<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 </head>
 
