Added link to wall from homepage

--- a/just_arrived.html
+++ b/just_arrived.html
@@ -62,7 +62,7 @@
       <button>Announce Your Arrival!</button>
   {{/if}}
  		</form>
-    <p>Attendees here: <strong>{{> attendeeCount}}</strong></p>
+    <p><a href="/wall">Attendees here:</a> <strong>{{> attendeeCount}}</strong></p>
   </div>
 </template>
 
