Fixe to admin mobile view attendee count

--- a/just_arrived.html
+++ b/just_arrived.html
@@ -107,7 +107,7 @@
     </tbody>
     </table>
     <!-- Mobile display of attendees -->
-    <h3 class="mobile">{{n}} attendees have registered.</h3>
+    <h3 class="mobile">Registered attendees: {{> attendeeCount}}</h3>
     <ul class="mobile">
       {{#each attendees}}
       <li>
