Activated announce arrival button on confirm page

--- a/just_arrived.html
+++ b/just_arrived.html
@@ -48,7 +48,7 @@
     <p><a href="/wall">See who else is here.</a></p>
     <hr>
     <p>If you just got here, be sure to check in below.</p>
-    <a href="/" class="button">Announce Your Arrival!</a>
+    <a href="#" class="rearrival button">Announce Your Arrival!</a>
   {{else }}
     <p>Share your arrival with others and stay connected after the event.</p>
     <form>
