Updated for mobile

--- a/just_arrived.html
+++ b/just_arrived.html
@@ -128,7 +128,7 @@
 </template>
 
 <template name="wall">
-  <div class="wrapper attendee-list">
+  <div class="wrapper attendee-list public">
     <h2>Attendees here: {{> attendeeCount}}</h2>
     <h3 class="mobile">Attendees here: {{> attendeeCount}}</h3>
     <p>To announce your arrival, visit <a href="/">arrived.crowd.cc</a></p>
